# israeli-cbs-mcp

./: LICENSE  README.md  cbs_mcp_server.py  pyproject.toml
