[project]
name = "israeli-cbs-mcp"
version = "0.1.0"
description = "MCP Server for Israeli Central Bureau of Statistics (CBS) Data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
]

[project.scripts]
cbs-mcp-server = "cbs_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbs_mcp_server.py"]

[tool.hatch.build.targets.sdist]
include = [
    "cbs_mcp_server.py",
    "README.md",
    "pyproject.toml",
]
